# SmartCan

./: README.md
libraries/SerialFlow/: SerialFlow.cpp  SerialFlow.h
src/SmartCanReceiver/: SmartCanReceiver.ino
src/SmartCanSender/: SmartCanSender.ino
src/SmartCanUI/: CMakeLists.txt  common.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  smartcanview.cpp  smartcanview.h
